Avatars using folder outside the project (Absolute path)